@@ -1,4 +1,5 @@
 2008-04-28  Stephen Sinclair <radarsat1@gmail.com>
+	* Add support for multicast groups to LibLo.
 	* Add test case for sending a crafted packet that would crash a lo_server without validation.
 	* Make validation-related functions internal to liblo.
 	* Add server input validation along with a function to deserialise an OSC message. (Chris Hixon)
